feat: Implement initial Tunneler JavaFX application with routing, monitoring, and settings panels.